# solidc-rs

./: Cargo.toml  build.rs  wrapper.h
benches/: arena_bench.rs  hashmap_bench.rs  string_bench.rs  threadpool_bench.rs  time_bench.rs
examples/: csv_processing.rs  data_structures.rs  pipeline_commands.rs  process_pipes.rs  string_ops.rs  threadpool.rs
src/: arena.rs  cache.rs  cstr.rs  csvparser.rs  dotenv.rs  dynarray.rs  file.rs  filepath.rs  flags.rs  hash.rs  lib.rs  list.rs  lock.rs  main.rs  map.rs  pipeline.rs  process.rs  slist.rs  socket.rs  str_to_num.rs  thread.rs  trie.rs  unicode.rs  xtime.rs
